--- a/.golangci.yml
+++ b/.golangci.yml
@@ -97,3 +97,10 @@ linters-settings:
   gofumpt:
     extra-rules: true
     lang-version: "1.21"
+  ireturn:
+    allow:
+      - anon
+      - error
+      - empty
+      - stdlib
+      - github.com/drone/drone-go/plugin/validator.Plugin
