refactor: rework ci config and use buildx for container builds (#15)

--- a/Dockerfile.multiarch
+++ b/Dockerfile.multiarch
@@ -1,3 +1,13 @@
+FROM --platform=$BUILDPLATFORM docker.io/golang:1.21@sha256:24a09375a6216764a3eda6a25490a88ac178b5fcb9511d59d0da5ebf9e496474 as build
+
+ARG TARGETOS
+ARG TARGETARCH
+
+ADD . /src
+WORKDIR /src
+
+RUN make build
+
 FROM docker.io/alpine:3.18@sha256:eece025e432126ce23f223450a0326fbebde39cdf496a85d8c016293fc851978
 
 LABEL maintainer="ownCloud DevOps <devops@owncloud.com>"
@@ -7,7 +17,8 @@ LABEL org.opencontainers.image.url="https://github.com/owncloud-ci/drone-fork-ap
 LABEL org.opencontainers.image.source="https://github.com/owncloud-ci/drone-fork-approval"
 LABEL org.opencontainers.image.documentation="https://github.com/owncloud-ci/drone-fork-approval"
 
-ADD dist/drone-fork-approval /bin/
+ARG TARGETOS
+ARG TARGETARCH
 
 RUN addgroup -g 1001 -S app && \
     adduser -S -D -H -u 1001 -s /sbin/nologin -G app -g app app
@@ -16,9 +27,10 @@ RUN apk --update add --no-cache ca-certificates && \
     rm -rf /var/cache/apk/* && \
     rm -rf /tmp/*
 
+COPY --from=build /src/dist/drone-fork-approval /bin/drone-fork-approval
+
 EXPOSE 3000
 
 USER app
 
 ENTRYPOINT ["/bin/drone-fork-approval"]
-CMD []
